# Pandemic-Simulation

./: .gitignore  README.md  aRoot.cpp  aRootCM.cpp  axis.cpp  axis.hpp  graph.cpp  graph.hpp  main.cpp  pandemic.cpp  pandemic.hpp  pandemic.test.cpp  pandemic1.cpp  pandemicCM.cpp  pandemicCM.hpp  pandemicCM1.cpp  person.cpp  person.hpp  simulation.sh  test.sh
Compile/: analysis.sh  analysisCM.sh  compile.sh
Data/: Result.txt  ResultCM.txt  aRoot.cpp  an.cpp
MandSIR/: CMakeLists.txt  Result.txt  compile.sh  epidemic.cpp  epidemic.hpp  epidemic.test.cpp  main.cpp  pandemic.cpp  pandemic.hpp  pandemic.test.cpp
Versione_1/: main.cpp  pandemic.hpp  pandemicCM.cpp  person.cpp  person.hpp  simulation.sh  simulation.sh.save
Versione_2/: CMakeLists.txt  axis.cpp  axis.hpp  graph.cpp  main.cpp  pandemic.hpp  pandemic.test.cpp  pandemic1.cpp  pandemicCM.hpp  pandemicCM1.cpp  person.cpp  person.hpp  utilities.cpp  utilities.hpp
Versione_2/Data/: Result.test.txt  Result.txt  ResultCM.txt
Versione_3/: CMakeLists.txt  axis.cpp  axis.hpp  config.txt  graph.cpp  graph.hpp  m_functions.cpp  m_functions.hpp  main.cpp  pandemic.cpp  pandemic.hpp  pandemic.test.cpp  pandemic1.cpp  pandemicCM.cpp  pandemicCM.hpp  pandemicCM1.cpp  person.cpp  person.hpp  setting_t.cpp  test.sh  utilities.cpp  utilities.hpp
Versione_3/Data/: Result.test.txt  Result.txt  ResultCM.txt
Versione_4/: CMakeLists.txt  axis.cpp  graph.hpp  m_functions.cpp  main.cpp  pandemic.cpp  pandemic.hpp  pandemicCM.cpp  pandemicCM.hpp
Versione_4/Data/: Result.test.txt
Versione_5/: CMakeLists.txt  axis.hpp  config.txt  graph.cpp  graph.hpp  m_functions.cpp  m_functions.hpp  main.cpp  pandemic.cpp  pandemic.hpp  pandemic.test.cpp  pandemicCM.cpp  pandemicCM.hpp  person.hpp
Versione_5/Data/: Result.test.txt  Result.txt  ResultCM.txt
Versione_6/: graph.hpp  m_functions.hpp  pandemic.cpp  pandemic.hpp  pandemicCM.cpp
Versione_7/: CMakeLists.txt  Result.txt  ResultCM.txt  axis.cpp  axis.hpp  config.txt  doctest.h  graph.cpp  graph.hpp  m_functions.cpp  main.cpp  pandemic.cpp  pandemic.test.cpp  pandemicCM.cpp  pandemicCM.hpp  person.cpp
Versione_7/Data/: Result.test.txt
Versione_7/header/: axis.hpp  graph.hpp  m_functions.hpp  pandemic.hpp
Versione_7/source/: axis.cpp  graph.cpp  m_functions.cpp  pandemic.cpp  pandemicCM.cpp  person.cpp
